# markovi

./: .gitignore  flake.nix  pyproject.toml
markovi/: bot.py  markovboi.py
